# telegram_bot

./: .gitignore  README.md  pyproject.toml  requierements.txt
src/telegram_bot/: bot.py  crew.py  main.py  scopes.py
src/telegram_bot/config/: agents.yaml  tasks.yaml
src/telegram_bot/tools/: delegate_tool.py  gmail_tool.py  google_calendar_tool.py
tests/: google.api.py
