[project]
name = "telegram_bot"
version = "0.1.0"
description = "telegram_bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
telegram_bot = "telegram_bot.main:run"
run_crew = "telegram_bot.main:run"
train = "telegram_bot.main:train"
replay = "telegram_bot.main:replay"
test = "telegram_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
